# StockMarketResearcher

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  vercel.json
backend/: main.py  pyproject.toml  requirements.txt  vercel.json
backend/agents/: CriticAgent.py  FundamentalsAgent.py  GPTLLM.py  MarketDataAgent.py  NewsSentimentAgent.py  crew_manager.py  llm.py
backend/alembic/: env.py
backend/alembic/versions/: 196413974a5d_initial_migration.py
backend/config/: settings.py
backend/db/: crud.py  database.py  models.py
backend/graph/: __init__.py  report.py  state.py  workflow.py
backend/jobs/: jobs.py
backend/mcp_servers/: __init__.py  news_server.py  yahoo_finance_server.py
backend/rag/: vector_store.py
backend/schema/: schemas.py
backend/tests/: test_schemas.py  test_workflow.py  test_yahoo_finance_server.py
backend/utils/: cache.py  pdf.py
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  research.ts
frontend/src/components/: AgentProgressPanel.tsx  ReportHistory.tsx  ReportViewer.tsx  SearchBar.tsx  SignalBadge.tsx
frontend/src/components/layout/: AppBar.tsx
frontend/src/hooks/: useSSE.ts
frontend/src/pages/: HistoryPage.tsx  ReportPage.tsx  SearchPage.tsx
frontend/src/theme/: muiTheme.ts
frontend/src/types/: api.ts
notebooks/: 01_langgraph_skeleton.ipynb
